# xiaomi-miloco

./: .dockerignore  .fork-only  .gitignore  .gitmodules  AGENTS.md
.ci/: Dockerfile.pr-review  pr-review-gate.sh
backend/miloco/: pyproject.toml
backend/miloco/src/miloco/admin/: router.py
backend/miloco/src/miloco/config/: settings.py
backend/miloco/src/miloco/miot/: client.py  schema.py
backend/miloco/src/miloco/perception/: client.py  processor.py  service.py
backend/miloco/tests/: test_device_info_sub_devices.py  test_settings.py
backend/miloco/tests/admin/: test_omni_config.py
backend/miloco/tests/perception/: test_engine_soft_stop.py
backend/miloco/tests/perception/engine/identity/: test_detector.py
backend/miot/: pyproject.toml
backend/miot/src/miot/: decoder.py
backend/miot/src/miot/configs/: camera_extra_info.yaml
docker/: DEPLOY-192.168.31.152.md  Dockerfile.agent  Dockerfile.miloco  README.md  apt-aliyun.sh  build-docker.sh  docker-compose.bridge.yml  docker-compose.yml  entrypoint-agent.sh  entrypoint-miloco.sh  env.example  install-uv.sh  mac-port-forward.sh  prepare-build.sh  uv.toml
docs/: DEVELOPMENT.md  README.md
knowledge/: README.md
miloco-agent/: .gitignore  README.md  config.example.json  pyproject.toml
miloco-agent/src/miloco_agent/: __init__.py  __main__.py  app.py  config.py
miloco-agent/src/miloco_agent/admin/: __init__.py  config_io.py  ops.py  router.py  service.py
miloco-agent/src/miloco_agent/admin/static/: index.html
miloco-agent/src/miloco_agent/bridge/: __init__.py  cli_resolve.py  context.py  memory.py  notify.py  prompt.py  skills.py  status.py  toolkit.py  tools.py
miloco-agent/src/miloco_agent/channels/: __init__.py
miloco-agent/src/miloco_agent/channels/feishu/: auth.py  bind_phrases.py  bindings.py  cards.py  client.py  crypto.py  handler.py  router.py  ws_client.py
miloco-agent/src/miloco_agent/cron/: __init__.py  jobs.py  labels.py  runner.py  scheduler.py  user_registry.py
miloco-agent/src/miloco_agent/notify/: __init__.py  policy.py  service.py
miloco-agent/src/miloco_agent/prompt/: __init__.py  builder.py  catalog.py  injection.py
miloco-agent/src/miloco_agent/runtime/: agentscope_runtime.py  idempotency.py  session_guard.py  session_store.py  turn_runner.py
miloco-agent/src/miloco_agent/tools/: __init__.py  as_tools.py  cron_tools.py  devices.py  habit_suggest.py  home_profile.py  miloco_client.py  perception_memory.py
miloco-agent/src/miloco_agent/trace/: recorder.py  store.py
miloco-agent/src/miloco_agent/webhook/: handlers.py  router.py
miloco-agent/tests/: test_admin.py  test_bridge.py  test_catalog.py  test_cron.py  test_feishu.py  test_p1_tools.py  test_p3_notify.py  test_p4_p5_features.py  test_p4_tools.py  test_react_iters.py  test_suggestion_dispatch.py  test_trace_recorder.py  test_webhook_contract.py
(+62 files in other folders)
