[project]
name = "miloco-agent"
version = "0.1.0"
description = "Miloco Agent Sidecar — AgentScope runtime replacing OpenClaw (fork-only)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.28",
  "pydantic>=2.10",
  "agentscope>=2.0,<3",
  "lark-oapi>=1.4",
  "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
miloco-agent = "miloco_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/miloco_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
