[project]
name = "miloco"
dynamic = ["version"]
description = "A Python backend for Xiaomi Miloco"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Miloco team", email = "xiaomi-miloco@xiaomi.com" }]
dependencies = [
  "aiofiles>=25.1.0",
  "av>=17.1.0",
  "fastapi>=0.136.3",
  "httpx>=0.28.1",
  "numpy>=2.2.0",
  "opencv-python-headless>=4.13.0.92",
  "onnxruntime>=1.27.0",
  "Pillow>=12.2.0",
  "psutil>=7.2.2",
  "pydantic>=2.13.4",
  "python-dotenv>=1.2.2",
  "scipy>=1.15.0",
  "tokenizers>=0.23.1",
  "uvicorn[standard]>=0.49.0",
  "miloco-miot",
]

[project.scripts]
miloco-backend = "miloco.main:start_server"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# 版本号从 git tag 派生（发布时 build.sh 经 SETUPTOOLS_SCM_PRETEND_VERSION 注入）；
# fallback-version 让无 tag 的克隆仍能 uv sync。root 指向仓库根（git 元数据所在）。
[tool.hatch.version]
source = "vcs"
raw-options = { root = "../..", fallback_version = "0.0.0" }

[tool.hatch.build.targets.wheel]
packages = ["src/miloco"]

[tool.hatch.build]
exclude = ["src/miloco/perception/models/", "src/miloco/perception/data/"]
